UI response to clicking the leave button in the channel list changed. Instead of animating with slideUp, give it a striped background until the state is updated. Prevents unexpected jumpiness when state is updated while leaving multiple channels.

--- a/themes/atwood/atwood.css
+++ b/themes/atwood/atwood.css
@@ -812,6 +812,10 @@ button.ui-button::-moz-focus-inner { border: 0; padding: 0; } /* reset extra pad
     padding-bottom: 6px;
 }
 
+.chatmore .sideBar ul.channelList > li.leaving {
+    background-image: url(images/leaving.png);
+}
+
 .chatmore .sideBar ul.channelList > li .channel {
     float: left;
 }
